--- a/package.json
+++ b/package.json
@@ -4,29 +4,29 @@
     "description": "",
     "main": "index.ts",
     "scripts": {
-        "start": "ts-node server.ts",
+        "start": "nodemon server.ts",
         "lint": "eslint --fix --ext ts,js,jsx src/"
     },
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "@types/cors": "^2.8.17",
-        "@types/express": "^4.17.21",
         "cors": "^2.8.5",
         "dotenv": "^16.4.5",
-        "eslint": "^8.57.0",
-        "eslint-config-prettier": "^9.1.0",
-        "eslint-plugin-prettier": "^5.1.3",
         "express": "^4.18.3",
         "express-async-handler": "^1.2.0",
         "helmet": "^7.1.0",
-        "mongoose": "^8.2.1",
-        "nodemon": "^3.1.0",
-        "prettier": "^3.2.5",
-        "ts-node": "^10.9.2"
+        "mongoose": "^8.2.1"
     },
     "devDependencies": {
+        "@types/cors": "^2.8.17",
+        "@types/express": "^4.17.21",
         "@types/node": "^20.11.25",
+        "eslint": "^8.57.0",
+        "eslint-config-prettier": "^9.1.0",
+        "eslint-plugin-prettier": "^5.1.3",
+        "nodemon": "^3.1.0",
+        "prettier": "^3.2.5",
+        "ts-node": "^10.9.2",
         "typescript": "^5.4.2"
     }
 }
