--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
         "cors": "^2.8.5",
         "dotenv": "^16.4.5",
         "express": "^4.18.3",
-        "express-async-handler": "^1.2.0",
         "helmet": "^7.1.0",
+        "http-status-codes": "^2.3.0",
         "mongoose": "^8.2.1"
     },
     "devDependencies": {
