--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,21 @@
 PORT=
 MONGODB_URI=
+
+ACCESS_TOKEN_SECRET=
+ACCESS_TOKEN_EXPIRES_IN='15m'
+REFRESH_TOKEN_SECRET=
+REFRESH_TOKEN_EXPIRES_IN='1d'
+
+MAIL_VERIFICATION_API_KEY=
+MAIL_VERIFICATION_URL=
+
+MAIL_HOST=
+MAIL_USER=
+MAIL_PASSWORD=
+MAIL_FROM=
+MAIL_TRANSPORT=
+
+REDIS_HOST=
+REDIS_PORT=
+REDIS_USERNAME=
+REDIS_PASSWORD=
