--- a/package.json
+++ b/package.json
@@ -10,17 +10,34 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "axios": "^1.6.7",
+        "bcrypt": "^5.1.1",
+        "bull": "^4.12.2",
         "cors": "^2.8.5",
         "dotenv": "^16.4.5",
         "express": "^4.18.3",
+        "generate-password": "^1.7.1",
         "helmet": "^7.1.0",
         "http-status-codes": "^2.3.0",
-        "mongoose": "^8.2.1"
+        "jsonwebtoken": "^9.0.2",
+        "mongoose": "^8.2.1",
+        "nodemailer": "^6.9.12",
+        "otp-generator": "^4.0.1",
+        "passport": "^0.7.0",
+        "passport-jwt": "^4.0.1"
     },
     "devDependencies": {
+        "@types/bcrypt": "^5.0.2",
+        "@types/bull": "^4.10.0",
         "@types/cors": "^2.8.17",
         "@types/express": "^4.17.21",
+        "@types/generate-password": "^1.5.1",
+        "@types/jsonwebtoken": "^9.0.6",
         "@types/node": "^20.11.25",
+        "@types/nodemailer": "^6.4.14",
+        "@types/otp-generator": "^4.0.2",
+        "@types/passport": "^1.0.16",
+        "@types/passport-jwt": "^4.0.1",
         "eslint": "^8.57.0",
         "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-prettier": "^5.1.3",
