--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
         "nodemailer": "^6.9.12",
         "otp-generator": "^4.0.1",
         "passport": "^0.7.0",
-        "passport-jwt": "^4.0.1"
+        "passport-jwt": "^4.0.1",
+        "uuid": "^9.0.1"
     },
     "devDependencies": {
         "@types/bcrypt": "^5.0.2",
@@ -38,6 +39,7 @@
         "@types/otp-generator": "^4.0.2",
         "@types/passport": "^1.0.16",
         "@types/passport-jwt": "^4.0.1",
+        "@types/uuid": "^9.0.8",
         "eslint": "^8.57.0",
         "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-prettier": "^5.1.3",
