--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "otp-generator": "^4.0.1",
         "passport": "^0.7.0",
         "passport-jwt": "^4.0.1",
+        "slugify": "^1.6.6",
         "uuid": "^9.0.1"
     },
     "devDependencies": {
