--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "helmet": "^7.1.0",
         "http-status-codes": "^2.3.0",
         "jsonwebtoken": "^9.0.2",
+        "moment": "^2.30.1",
         "mongoose": "^8.2.1",
         "nodemailer": "^6.9.12",
         "otp-generator": "^4.0.1",
@@ -35,6 +36,7 @@
         "@types/express": "^4.17.21",
         "@types/generate-password": "^1.5.1",
         "@types/jsonwebtoken": "^9.0.6",
+        "@types/moment": "^2.13.0",
         "@types/node": "^20.11.25",
         "@types/nodemailer": "^6.4.14",
         "@types/otp-generator": "^4.0.2",
