--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "license": "ISC",
     "dependencies": {
         "axios": "^1.6.7",
+        "aws-sdk": "^2.1533.0",
         "bcrypt": "^5.1.1",
         "bull": "^4.12.2",
         "cors": "^2.8.5",
@@ -22,6 +23,7 @@
         "jsonwebtoken": "^9.0.2",
         "moment": "^2.30.1",
         "mongoose": "^8.2.1",
+        "multer": "^1.4.5-lts.1",
         "nodemailer": "^6.9.12",
         "otp-generator": "^4.0.1",
         "passport": "^0.7.0",
@@ -30,6 +32,7 @@
         "uuid": "^9.0.1"
     },
     "devDependencies": {
+        "@types/aws-sdk": "^2.7.0",
         "@types/bcrypt": "^5.0.2",
         "@types/bull": "^4.10.0",
         "@types/cors": "^2.8.17",
@@ -37,6 +40,7 @@
         "@types/generate-password": "^1.5.1",
         "@types/jsonwebtoken": "^9.0.6",
         "@types/moment": "^2.13.0",
+        "@types/multer": "^1.4.11",
         "@types/node": "^20.11.25",
         "@types/nodemailer": "^6.4.14",
         "@types/otp-generator": "^4.0.2",
