--- a/.env.example
+++ b/.env.example
@@ -19,3 +19,9 @@ REDIS_HOST=
 REDIS_PORT=
 REDIS_USERNAME=
 REDIS_PASSWORD=
+
+AWS_BASE_URL=
+AWS_REGION=
+AWS_PUBLIC_BUCKET_NAME=
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
