--- a/package.json
+++ b/package.json
@@ -13,16 +13,29 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "2": "^3.0.0",
+    "@vue/compat": "^3.1.0",
+    "axios": "^1.6.8",
+    "bootstrap": "^5.3.3",
+    "bootstrap-vue": "^2.23.1",
+    "jwt-decode": "^4.0.0",
+    "lodash": "^4.17.21",
+    "mdb-vue-ui-kit": "^4.1.1",
+    "moment": "^2.30.1",
     "pinia": "^2.1.7",
+    "select": "^1.1.2",
+    "slugify": "^1.6.6",
     "vue": "^3.4.21",
-    "vue-router": "^4.3.0"
+    "vue-router": "^4.3.0",
+    "vue-toastification": "^2.0.0-rc.5"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
     "@tsconfig/node20": "^20.1.2",
+    "@types/lodash": "^4.17.0",
     "@types/node": "^20.11.25",
     "@vitejs/plugin-vue": "^5.0.4",
-    "@vitejs/plugin-vue-jsx": "^3.1.0",
+    "@vue/compiler-sfc": "^3.1.0",
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/eslint-config-typescript": "^12.0.0",
     "@vue/tsconfig": "^0.5.1",
